Fixed navbar overlapping sidebar text

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -77,7 +77,7 @@ body {
     background-color: #388e3c;
     color: #ffffff;
     transition: left 0.3s ease-in-out;
-    padding-top: 60px;
+    padding-top: 70px;
     z-index: 9;
 }
 
